[package]
name = "number_theory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enumerate_quotients"
path = "src/enumerate_quotients.rs"

[[bin]]
name = "primality_test"
path = "src/primality_test.rs"

[[bin]]
name = "enumerate_primes"
path = "src/enumerate_primes.rs"

[[bin]]
name = "sum_of_floor_of_linear"
path = "src/sum_of_floor_of_linear.rs"

[dependencies]
